--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
                                           <h6 class="date"><i class="fa fa-calendar-o"></i> {{ post.date | date_to_long_string }}</h6>
                                           <p>{{ post.excerpt }}</p>
                                           <p>
-                                            <a href="/course{{ post.url }}" class="btn btn-success"><i class="fa fa-info-circle"></i> Read More</a>
+                                            <a href="/palette{{ post.url }}" class="btn btn-success"><i class="fa fa-info-circle"></i> Read More</a>
                                           </p>
                                         </div>
                                       
