--- a/_posts/2013-12-28-marketing-online.html
+++ b/_posts/2013-12-28-marketing-online.html
@@ -1,3 +1,8 @@
+---
+title: Marketing predictions-5biggests things in 2014
+layout: post
+published: true
+---
 <ol class="body-frame" id="posts">
 
 
