--- a/_posts/2013-12-28-marketplace-html.html
+++ b/_posts/2013-12-28-marketplace-html.html
@@ -1,4 +1,9 @@
-Buy HTML5 games
+---
+title: Development tool for html5 games
+layout: post
+published: true
+---
+
 MarketJS is a marketplace for buying and selling HTML5 game licenses.
 Over 1000 premium HTML5 games up for licensing, created by over 2000 developers.
 Buy games instantly, customize, and deploy to your own server.
