--- a/_posts/2013-12-28-money-htmlsitedevpt.html
+++ b/_posts/2013-12-28-money-htmlsitedevpt.html
@@ -1,3 +1,8 @@
+---
+title: How to make money with html5 apps
+layout: post
+published: true
+---
 <td id="sites-canvas-wrapper">
 <div id="sites-canvas">
 <div id="goog-ws-editor-toolbar-container"> </div>
