--- a/_posts/2013-12-28-money-makinghtml.html
+++ b/_posts/2013-12-28-money-makinghtml.html
@@ -1,3 +1,8 @@
+---
+title: Making money with HTML5 games
+layout: post
+published: true
+---
 <div class="content_box_middle">
         <!-- InstanceBeginEditable name="BodyContent" --> 
         <div class="header_large">
